Navegacao atraves de botoes

--- a/index.html
+++ b/index.html
@@ -19,6 +19,10 @@
       <li><img src="./img/foto6.jpg" alt=""></li>
     </ul>
   </div>
+  <div class="arrowNav">
+    <button class="prev">Prev</button>
+    <button class="next">Next</button>
+  </div>
   <script type="module" src="./js/script.js"></script>
 </body>
 </html>
