--- a/index.html
+++ b/index.html
@@ -9,6 +9,14 @@
 </head>
 
 <body>
+  <ul class="custom-controls">
+    <li><img src="img/foto1-thumb.jpg" alt=""></li>
+    <li><img src="img/foto2-thumb.jpg" alt=""></li>
+    <li><img src="img/foto3-thumb.jpg" alt=""></li>
+    <li><img src="img/foto4-thumb.jpg" alt=""></li>
+    <li><img src="img/foto5-thumb.jpg" alt=""></li>
+    <li><img src="img/foto6-thumb.jpg" alt=""></li>
+  </ul>
   <div class="slide-wrapper">
     <ul class="slide">
       <li><img src="./img/foto1.jpg" alt=""></li>
@@ -19,10 +27,11 @@
       <li><img src="./img/foto6.jpg" alt=""></li>
     </ul>
   </div>
-  <div class="arrowNav">
-    <button class="prev">Prev</button>
-    <button class="next">Next</button>
+  <div class="arrow-nav">
+    <button class="prev"></button>
+    <button class="next"></button>
   </div>
   <script type="module" src="./js/script.js"></script>
 </body>
+
 </html>
